--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,12 +3,18 @@
 
 :root {
     --primary: rgb(254, 44, 85);
+
+    //default layout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 html {
     font-size: 62.5%;
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
