--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -8,5 +8,77 @@
 
 .inner {
     height: 100%;
+    display: flex;
+    align-items: center;
     width: var(--default-layout-width);
+    justify-content: space-between;
+}
+.logo {
+}
+.search {
+    position: relative;
+    height: 46px;
+    width: 360px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 92px;
+    padding-left: 16px;
+    display: flex;
+    align-items: center;
+    border: 1.5px solid transparent;
+
+    input {
+        font-family: 'IBM Plex Sans', ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
+        font-weight: 400;
+        flex: 1;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        font-size: 14px;
+        height: 46px;
+        caret-color: red;
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgb(79, 82, 82);
+    }
+
+    input:not(:placeholder-shown) ~ .clear {
+        display: flex;
+    }
+
+    &:focus-within {
+        border: 1.5px solid rgb(99, 97, 97);
+    }
+}
+.loading,
+.clear {
+    position: absolute;
+    border: none;
+    right: 68px;
+    display: none;
+}
+.search-btn {
+    font-size: 20px;
+    border: none;
+    color: rgba(22, 24, 35, 0.34);
+    width: 52px;
+    height: 100%;
+    border-top-right-radius: 92px;
+    border-bottom-right-radius: 92px;
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+.border {
+    width: 1px;
+    height: 28px;
+    display: flex;
+    top: 9px;
+    right: 52px;
+    background-color: rgb(129, 128, 128);
 }
