--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -15,10 +15,13 @@
 }
 .logo {
 }
+.search,
+.search-info {
+    width: 360px;
+}
 .search {
     position: relative;
     height: 46px;
-    width: 360px;
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: 92px;
     padding-left: 16px;
@@ -49,6 +52,8 @@
     &:focus-within {
         border: 1.5px solid rgb(99, 97, 97);
     }
+}
+.search-info {
 }
 .loading,
 .clear {
@@ -81,4 +86,10 @@
     top: 9px;
     right: 52px;
     background-color: rgb(129, 128, 128);
+}
+.search-title {
+    font-size: 14px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+    padding: 5px 12px;
 }
